cluster/apps/default/blog/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: blog
  namespace: default
spec:
  selector:
    app: blog
  ports:
  - port: 8080
    targetPort: website
