cluster/apps/default/blog/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    # cert-manager.io/issuer: freeipa-issuer
    # cert-manager.io/issuer-group: certmanager.freeipa.org
    # cert-manager.io/issuer-kind: ClusterIssuer
    # cert-manager.io/common-name: flux-test.i.stabl.one
spec:
  tls:
  - hosts:
    - flux-test.i.stabl.one
  #   secretName: blog-cert
  # rules:
  #   - host: flux-test.i.stabl.one
  #     http:
  #       paths:
  #         - path: "/"
  #           pathType: Prefix
  #           backend:
  #             service:
  #               name: blog
  #               port:
  #                 number: 8080
